# mpi_rma_lock_free_stack

./: CMakeLists.txt
apps/: main_rma_inner_stack_simple_push_pop_task_app.cpp  main_rma_treiber_central_stack_only_pop_benchmark_app.cpp  main_rma_treiber_central_stack_only_push_benchmark_app.cpp  main_rma_treiber_central_stack_random_operation_benchmark_app.cpp  main_rma_treiber_central_stack_simple_push_pop_task_app.cpp  main_rma_treiber_decentralized_stack_only_pop_benchmark_app.cpp  main_rma_treiber_decentralized_stack_only_push_benchmark_app.cpp  main_rma_treiber_decentralized_stack_random_operation_benchmark_app.cpp  main_rma_treiber_decentralized_stack_simple_push_pop_task_app.cpp
include/: logging.h  stack_tasks.h
libs/: CMakeLists.txt
libs/custom_mpi_extensions/: CMakeLists.txt
libs/custom_mpi_extensions/include/: MpiException.h
libs/custom_mpi_extensions/src/: MpiException.cpp
libs/rma_stack/: CMakeLists.txt
libs/rma_stack/include/inner/: CountedNodePtr.h  InnerStack.h  Node.h  ref_counting.h
libs/rma_stack/include/outer/: ExponentialBackoff.h  RmaTreiberCentralStack.h  RmaTreiberDecentralizedStack.h
libs/rma_stack/src/inner/: CountedNodePtr.cpp  InnerStack.cpp  Node.cpp  ref_counting.cpp
libs/rma_stack/src/outer/: ExponentialBackoff.cpp
libs/stack_interface/: CMakeLists.txt
libs/stack_interface/include/: IStack.h
scripts/: build_debug_linux_x86_64.sh  build_release_linux_cluster_intel_mpi.sh  build_release_linux_x86_64.sh  create_logs_example.py  plot_benchmark.py  plot_centralized_vs_decentralized_benchmark.py  run_debug_inner_stack_simple_push_pop_task_app.sh  run_debug_treiber_central_stack_only_pop_benchmark_app.sh  run_debug_treiber_central_stack_only_push_benchmark_app.sh  run_debug_treiber_central_stack_random_operation_benchmark_app.sh  run_debug_treiber_central_stack_simple_push_pop_task_app.sh  run_debug_treiber_decentralized_stack_only_pop_benchmark_app.sh  run_debug_treiber_decentralized_stack_only_push_benchmark_app.sh  run_debug_treiber_decentralized_stack_random_operation_benchmark_app.sh  run_debug_treiber_decentralized_stack_simple_push_pop_task_app.sh  run_release_inner_stack_simple_push_pop_task_app.sh  run_release_treiber_central_stack_only_pop_benchmark_app.sh  run_release_treiber_central_stack_only_push_benchmark_app.sh  run_release_treiber_central_stack_random_operation_benchmark_app.sh  run_release_treiber_central_stack_simple_push_pop_task_app.sh  run_release_treiber_decentralized_stack_only_pop_benchmark_app.sh  run_release_treiber_decentralized_stack_only_push_benchmark_app.sh  run_release_treiber_decentralized_stack_random_operation_benchmark_app.sh  run_release_treiber_decentralized_stack_simple_push_pop_task_app.sh
src/: logging.cpp  stack_tasks.cpp
